# bookly-agent

./: .env.example  README.md  pyproject.toml
artifacts/: decagon-presentation.html
bookly_agent/: __init__.py  cli.py  config.py  orchestrator.py  policies.py  router.py  state.py  types.py
bookly_agent/flows/: __init__.py  base.py  general_faq.py  order_status.py  refund.py
bookly_agent/llm/: client.py  prompts.py
bookly_agent/server/: flask_blueprint.py
bookly_agent/server/widget/: support-widget.css  support-widget.js
bookly_agent/tools/: base.py  orders.py  refunds.py
data/: mock_orders.json
tests/: conftest.py  test_api.py  test_flows.py  test_orchestrator.py  test_tools.py
widget/: support-widget.css  support-widget.js
